# kmidimon

./: .cdtproject  .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  INSTALL.md  NEWS  NEWS.md  README  README.md  TODO  TODO.md  configure.debug  configure.in.in  configure.release  datafiles.qrc  kmidimon.desktop  kmidimon.fedora.spec  kmidimon.fedora.spec.in  kmidimon.kdevelop  kmidimon.lsm  kmidimon.mdk.spec  kmidimon.mdk.spec.in  kmidimon.pro  kmidimon.spec.in  link-aseqmm  link-drumstick  net.sourceforge.kmidimon.appdata.xml  net.sourceforge.kmidimon.desktop  net.sourceforge.kmidimon.metainfo.xml  standards.ins  update-i18n
.github/workflows/: linux-build.yml
cmake_admin/: FindKDECONFIG.cmake  FindMEINPROC.cmake  FindMSGFMT.cmake  FindPCHSupport.cmake  PandocMacros.cmake  TranslationUtils.cmake
doc/: CMakeLists.txt  Makefile.am  docs.qrc  kmidimon.1  kmidimon.1.md  kmidimon.ja.1  kmidimon.ja.1.md
doc/cs/: index.html  index.md
doc/en/: CMakeLists.txt  Makefile.am  docs.qrc  handbook.xml  index.docbook  index.html  index.md  kmidimon.1  kmidimon.html  kmidimon.md  man.docbook  manpage.md  manpage.xml
doc/es/: index.html  index.md
doc/fr/: index.html  index.md
doc/ja/: CMakeLists.txt  index.docbook  index.html  index.md  man-kmidimon.1.docbook
icons/: .directory  CMakeLists.txt  kmidimon.svgz
po/: CMakeLists.txt  cs.po  es.po  fr.po  ja.po  kmidimon.pot
src/: CMakeLists.txt  Makefile.am  about.cpp  about.h  about.ui  configdialog.cpp  configdialog.h  configdialogbase.ui  connectdlg.cpp  connectdlg.h  debugdef.h  eventfilter.cpp  eventfilter.h  eventfilters.h  fancylistviewitem.cpp  fancylistviewitem.h  helpwindow.cpp  helpwindow.h  iconutils.cpp  iconutils.h  instrument.cpp  instrument.h  kmidimon.cpp  kmidimon.desktop  kmidimon.h  kmidimon.lsm  kmidimon.qrc  kmidimonui.rc  kmidimonwidget.cpp  kmidimonwidget.h  kmidimonwidgetbase.ui  kmidimonwin.ui  main.cpp  player.cpp  player.h  proxymodel.cpp  proxymodel.h  qt_kde.h  sequenceitem.cpp  sequenceitem.h  (+8 more)
src/icons/: Makefile.am
templates/: cpp  h  sh
translations/: CMakeLists.txt  cs.ts  es.ts  fr.ts  ja.ts  kmidimon_cs.ts  kmidimon_es.ts  kmidimon_fr.ts  kmidimon_ja.ts
